# cpp_faster-rcnn

./: README.md
faster-rcnn1/: CMakeLists.txt  main.cpp
faster-rcnn1/lib/: CMakeLists.txt  faster_rcnn.cpp  faster_rcnn.hpp
faster-rcnn2/: CMakeLists.txt  Register.h  default_config.json  main.cpp
faster-rcnn2/lib/: CMakeLists.txt  frcnn_api.cpp  frcnn_api.hpp
